--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
       }(window.location))
     </script>
 
+   <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=${import.meta.env.VITE_GTM_ID}"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', '${import.meta.env.VITE_GTM_ID}');
+    </script>
+
+
 
   <body>
     <div id="root"></div>
