--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', '${import.meta.env.VITE_GTM_ID}');
+      gtag('config', import.meta.env.VITE_GTM_ID);
     </script>
 
 
