--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </script>
 
    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=${import.meta.env.VITE_GTM_ID}"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9PM0WN960Y"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', import.meta.env.VITE_GTM_ID);
+      gtag('config', 'G-9PM0WN960Y');
     </script>
 
 
