--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <title>Confab International</title>
     <meta charset="UTF-8" />
+    <meta 
+      name="description" 
+      content="Confab International: Engineering-driven staffing for a sustainable future."
+      data-rh="true"
+    />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
