fixed meta inspector fb

--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
       content="Confab International: Engineering-driven staffing for a sustainable future."
       data-rh="true"
     />
+    <!-- Meta tags for LinkedIn -->
+    <meta property="og:title" content="Confab International">
+    <meta property="og:description" content="Confab International">
+    <meta property="og:image" content="https://www.linkedin.com/company/confab-international-llc">
+    <meta property="og:url" content="https://www.linkedin.com/company/confab-international-llc">
+    <meta property="og:type" content="website">
+
+    <!-- Meta tags for Instagram -->
+    <meta property="og:title" content="Confab International">
+    <meta property="og:description" content="Confab International">
+    <meta property="og:image" content="https://www.instagram.com/confabint/">
+    <meta property="og:url" content="https://www.instagram.com/confabint/">
+
+    <meta property="og:type" content="website">
+    <meta name="theme-color" content="#000000">
+
+    <link rel='canonical' href='/'/>
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
