--- a/index.html
+++ b/index.html
@@ -1,79 +1,57 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
+    <meta charset="UTF-8">
     <title>Confab International</title>
-    <meta charset="UTF-8" />
-    <meta 
-      name="description" 
-      content="Confab International: Engineering-driven staffing for a sustainable future."
-      data-rh="true"
-    />
-    <!-- Meta tags for LinkedIn -->
+    <meta name="description" content="Confab International: Engineering-driven staffing for a sustainable future." data-rh="true">
     <meta property="og:title" content="Confab International">
     <meta property="og:description" content="Confab International">
     <meta property="og:image" content="https://www.linkedin.com/company/confab-international-llc">
     <meta property="og:url" content="https://www.linkedin.com/company/confab-international-llc">
     <meta property="og:type" content="website">
-
-    <!-- Meta tags for Instagram -->
-    <meta property="og:title" content="Confab International">
-    <meta property="og:description" content="Confab International">
-    <meta property="og:image" content="https://www.instagram.com/confabint/">
-    <meta property="og:url" content="https://www.instagram.com/confabint/">
-
-    <meta property="og:type" content="website">
     <meta name="theme-color" content="#000000">
-
-    <link rel='canonical' href='/'/>
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Asynchronously load Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Changa:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <script type="text/javascript">
-      (function(l) {
-        if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
-            return s.replace(/~and~/g, '&')
-          }).join('?');
-          window.history.replaceState(null, null,
-              l.pathname.slice(0, -1) + decoded + l.hash
-          );
-        }
-      }(window.location))
-    </script>
+    <!-- Canonical link -->
+    <link rel="canonical" href="https://www.confabint.com">
 
-   <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9PM0WN960Y"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-9PM0WN960Y');
-    </script>
-
-
-
-  <body>
+</head>
+<body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    <!--Start of Tawk.to Script-->
-      <script type="text/javascript">
+
+    <!-- Defer non-critical JavaScript -->
+    <script type="module" src="/src/main.jsx" defer></script>
+
+    <!-- Start of Tawk.to Script -->
+    <script type="text/javascript" defer>
         var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
         (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/65cb286f8d261e1b5f5f958e/1hmgpbu7v';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
+            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+            s1.async=true;
+            s1.src='https://embed.tawk.to/65cb286f8d261e1b5f5f958e/1hmgpbu7v';
+            s1.charset='UTF-8';
+            s1.setAttribute('crossorigin','*');
+            s0.parentNode.insertBefore(s1,s0);
         })();
-      </script>
-    <!--End of Tawk.to Script-->
-  </body>
+    </script>
+    <!-- End of Tawk.to Script -->
+
+    <!-- Google Tag Manager -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9PM0WN960Y"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-9PM0WN960Y');
+    </script>
+
+</body>
 </html>
