--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Changa:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
     <!-- Canonical link -->
-    <link rel="canonical" href="https://www.confabint.com">
+    <link rel="canonical" href="https://www.confabint.com/">
 
 </head>
 <body>
