--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
           }
         }(window.location))
     </script>
-    
+
     <title>Confab International</title>
     <meta name="description" content="Confab International: Engineering-driven staffing for a sustainable future." data-rh="true">
     <meta property="og:title" content="Confab International">
     <meta property="og:description" content="Confab International">
-    <meta property="og:image" content="https://www.linkedin.com/company/confab-international-llc">
-    <meta property="og:url" content="https://www.linkedin.com/company/confab-international-llc">
+    <meta property="og:image" content="https://www.confabint.com/logo.webp">
+    <meta property="og:url" content="https://confabint.com/blogs">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/svg+xml" href="/logo.png">
